--- a/ansible/roles/argocd/tasks/installation.yml
+++ b/ansible/roles/argocd/tasks/installation.yml
@@ -35,7 +35,7 @@
         name: openshift-gitops-operator
         namespace: openshift-gitops-operator
       spec:
-        channel: latest
+        channel: gitops-1.15
         installPlanApproval: Automatic
         name: openshift-gitops-operator
         source: redhat-operators
