--- a/ansible/roles/tpa/tasks/main.yml
+++ b/ansible/roles/tpa/tasks/main.yml
@@ -8,10 +8,6 @@
     name: '{{ tpa_project }}'
     state: present
 
-- name: Include Streams
-  ansible.builtin.include_role:
-    name: streams
-
 - name: Include Minio
   ansible.builtin.include_role:
     name: minio
@@ -56,6 +52,7 @@
   kubernetes.core.helm_repository:
     name: openshift-helm-charts
     repo_url: "https://charts.openshift.io"
+    force_update: true
   ignore_errors: true
   register: ignore_errors_register
 
