--- a/ansible/roles/minio/defaults/main.yml
+++ b/ansible/roles/minio/defaults/main.yml
@@ -1,4 +1,4 @@
-minio_image_tag: RELEASE.2024-10-02T17-50-41Z-cpuv1
+minio_image_tag: RELEASE.2025-06-13T11-33-47Z-cpuv1
 minio_pvc_name: minio-pvc
-minio_region: eu-west-1
+minio_region: eu-east-1
 minio_pvc_size: 40Gi
