--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -15,14 +15,6 @@
     rhdh_keycloak_realm: rhdh
     rhdh_keycloak_client_id: rhdh
     rhdh_keycloak_client_secret: 9IAuKgbRcEUTU4mjeUUTY25P6IKo0B6L
-    rhdh_sa_name: local-cluster
-    rhdh_secret_name: secrets-rhdh
-    rhdh_cm_name: app-config-rhdh
-    rhdh_ns: rhdh
-    rhdh_template_urls:
-      # - https://github.com/GcBackstageDemos/tssc-sample-templates/blob/my-version/all.yaml
-      # - https://github.com/GcBackstageDemos/trusted-application-pipeline-templates/blob/my-version/showcase-templates.yaml
-      - https://github.com/GcBackstageDemos/backstage-camel-templates/blob/main/templates.yaml
 
   tasks:
     - name: Check Required Parameters
@@ -31,24 +23,24 @@
       when:
         - (server is not defined) or (token is not defined) or (server is none) or (token is none)
       ignore_errors: false
-      tags: [keycloak, acs, tekton, argocd, tas, tpa, devhub, devspaces]
+      tags: [keycloak, acs, tekton, argocd, tas, tpa, rhdh, devspaces]
 
     - name: Set domain
       ansible.builtin.set_fact:
         domain: "{{ server | regex_replace('https://api.') | regex_replace(':6443') }}"
-      tags: [keycloak, acs, tekton, argocd, tas, tpa, devhub, devspaces]
+      tags: [keycloak, acs, tekton, argocd, tas, tpa, rhdh, devspaces]
 
     - name: Set Subdomain
       ansible.builtin.set_fact:
         route_subdomain: "apps.{{ domain }}"
-      tags: [keycloak, acs, tekton, argocd, tas, tpa, devhub, devspaces]
+      tags: [keycloak, acs, tekton, argocd, tas, tpa, rhdh, devspaces]
 
     - name: Include Keycloak
       ansible.builtin.include_role:
         name: keycloak
         apply:
-          tags: [keycloak, tas, tpa, devhub]
-      tags: [keycloak, tas, tpa, devhub]
+          tags: [keycloak, tas, tpa, rhdh]
+      tags: [keycloak, tas, tpa, rhdh]
 
     - name: Include ACS
       ansible.builtin.include_role:
@@ -61,15 +53,15 @@
       ansible.builtin.include_role:
         name: tekton
         apply:
-          tags: [tekton, devhub]
-      tags: [tekton, devhub]
+          tags: [tekton, rhdh]
+      tags: [tekton, rhdh]
 
     - name: Include ArgoCD
       ansible.builtin.include_role:
         name: argocd
         apply:
-          tags: [argocd, devhub]
-      tags: [argocd, devhub]
+          tags: [argocd, rhdh]
+      tags: [argocd, rhdh]
 
     - name: Include TAS
       ansible.builtin.include_role:
@@ -87,10 +79,10 @@
 
     - name: Include RHDH
       ansible.builtin.include_role:
-        name: devhub
+        name: rhdh
         apply:
-          tags: devhub
-      tags: devhub
+          tags: rhdh
+      tags: rhdh
 
     - name: Include DevSpaces
       ansible.builtin.include_role:
